<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="VisionJog" Id="{1712aba2-8ad2-43ea-86d8-883fbfc4e967}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM VisionJog
VAR
	State:INT;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GVL.Mode = Modes.MAN THEN
	GVL.Vision.SingleShot(Enable:=HMI.Bt_ActivateSingle, 
						Execute:=HMI.Bt_Shot,
						Q=>GVL.VisionResults,
						Measurement=>HMI.L_NewMeasurement);
    GVL.Vision.ContinuousShot(Enable:=HMI.Bt_ActivateContinuous,
						Q=>GVL.VisionResults);
ELSE
	HMI.Bt_ActivateSingle:=FALSE;
	HMI.Bt_ActivateContinuous:=FALSE;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="VisionJog">
      <LineId Id="13" Count="2" />
      <LineId Id="20" Count="1" />
      <LineId Id="27" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>